fixed responsive issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		  <a href="siginup.html">Signup</a>
 		  <a href="login.html">Login</a>
-		  <a href="#work">Get Stated</a>
+		  <a href="#work">Get Started</a>
 	  </div>	
 	</header>
 	<main id="page-wrapper" class="scrolling-box">
@@ -46,7 +46,7 @@
       <div class="container-work" id="work">
       	<div class="container-wrapup">
       	 	<h2>How It Works</h2>
-      		<p>follow the step bellow to get started on Amazing Journey...</p>
+      		<p>follow the steps bellow to get started on Amazing Journey...</p>
       	</div>
       <div class="container-section">
         <div class="container-arran">
