--- a/siginup.html
+++ b/siginup.html
@@ -19,7 +19,7 @@
        		<li ><a href="index.html" >Home</a></li>
        		<li class="target"><a href="siginup.html">Signup</a></li>
        		<li><a href="login.html">Login</a></li>
-			<li><a href="#work">Get Stated</a></li>
+			<li><a href="index.html">Get Stated</a></li>
 			</ul>
         </nav>
         <span class="slideshow"  onclick="openNav()">&#9776;</span>
@@ -43,22 +43,10 @@
             <form class="">
               <div class="input-grid">
                 <div class="input-div d-flex justify-content-center">
-                  <input type="text" name="firstName" id="firstName" value="" placeholder="First Name" class="w-100" size="35" required>
-                </div>
-                <div class="input-div d-flex justify-content-center">
-                <input type="text" name="lastName" id="lastName" value="" placeholder="Last Name" class="w-100" size="35" required>	
-                </div>
-                <div class="input-div d-flex justify-content-center">
-                  <input type="text" name="otherName" id="otherName" value="" placeholder="Other Name" class="w-100" size="35">
-                </div>
-                <div class="input-div d-flex justify-content-center">
                   <input type="text" name="username" id="username" value="" placeholder="Username" class="w-100" size="35" required>
                 </div>
                 <div class="input-div d-flex justify-content-center">
                   <input type="email" name="email" id="email" value="" placeholder="Email Address" class="w-100"  size="35" required>
-                </div>
-                <div class="input-div d-flex justify-content-center">
-                  <input type="tel" name="phoneNumber" id="phoneNumber" value="" placeholder="Phone Number" class="w-100"  size="35" required>
                 </div>
                 <div class="input-div d-flex justify-content-center">
                   <input type="password" name="password" id="password" value="" placeholder="Password" class="w-100"  size="35" required>
