fixed feedback from ui

--- a/forget.html
+++ b/forget.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/login.css" />
 </head>
 
-<body>
+<body style="background-image: url(./images/achv.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;">
 <header class="header-page" id="header">
 	  <div class="questioner-header" id="questioner">
 	  	<h1><span>Qu</span>estioner</h1>
@@ -19,7 +19,6 @@
        		<li ><a href="index.html" >Home</a></li>
        		<li ><a href="siginup.html">Signup</a></li>
        		<li class="target"><a href="login.html">Login</a></li>
-			<li><a href="#work">Get Stated</a></li>
 			</ul>
         </nav>
         <span class="slideshow"  onclick="openNav()">&#9776;</span>
@@ -32,7 +31,6 @@
 		  <a href="index.html">Home</a>
 		  <a href="siginup.html">Signup</a>
 		  <a href="login.html">Login</a>
-		  <a href="#work">Get Stated</a>
 	  </div>	
 </header>
  <div class="content d-flex justify-content-center align-items-center">
