--- a/dashboard/userdashbbord/profile.html
+++ b/dashboard/userdashbbord/profile.html
@@ -5,7 +5,7 @@
 <title>Questioner | Profile</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../css/style.css" />
-<link rel="stylesheet" type="text/css" href="../../css/login.css" />
+<!-- <link rel="stylesheet" type="text/css" href="../../css/login.css" /> -->
 <link rel="stylesheet" type="text/css" href="../../css/font.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -35,7 +35,66 @@
 		  <a href="../../index.html">LogOut</a>
 	  </div>	
 </header>
-<div class="wrapper-con">
+<div class="row2">
+  <div class="leftcolumn">
+    <div class="cardd">
+      <h2>Okpako Marvis</h2>
+      <h5>Date Created, Dec 7, 2017</h5>
+      <hr>
+      <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
+      <div>
+         <p><span> Username</span>: Marvis23 &nbsp;&nbsp;&nbsp;&nbsp;<span> First name</span>: Marvis &nbsp;&nbsp;&nbsp;&nbsp;<span> Last name</span> : Okpako</p> <p><span>Othername</span>: Ogheneakpobor  &nbsp;&nbsp;&nbsp;&nbsp;<span>PhoneNo:</span> 08163037756</p>
+      </div>
+      <hr>
+      <h3>About Me</h3><br>
+      <p style="color:#3B5998;">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+    <div class="cardd">
+      <h3 >Update your details</h3>
+      <div class="containertb">
+    <form action="">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" class="textin" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" class="textin" placeholder="Your last name..">
+    <label for="lname">Other Name</label>
+    <input type="text" id="lname" name="othername" class="textin" placeholder="Your Other name..">
+    <label for="lname">Phone No</label>
+    <input type="tel" id="lname" name="phoneno" class="textin" placeholder="Your phone no..">
+
+    <label for="subject">Tell us about you</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:150px"></textarea>
+
+    <input type="submit" value="update" class="submit">
+
+  </form>
+</div>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="cardd">
+      <!-- <h2>About Me</h2> -->
+      <img src="../../images/passport.jpg" alt="avater" height="150" width="100%">
+      <p><span>Change Image.. </span><br><input type="file" class="file" ></p>
+    </div>
+    <div class="cardd">
+      <h3>Questions Asked</h3>
+      <div class="fakeimg">20</div>
+      <h3>Comments</h3>
+      <div class="fakeimg">25</div>
+      <h3>Top Question Feed</h3>
+      <div class="fakeimg">21</div>
+    </div>
+    <div class="cardd">
+      <h3>Follow Me</h3>
+      <p><a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a></p>
+    </div>
+  </div>
+</div>
+<!-- <div class="wrapper-con">
 <div class="card-1">
   <img src="../../images/customer-512.png" alt="John" style="width:100%">
   <h1>John Doe</h1>
@@ -116,7 +175,7 @@
 <div class="answer">
 	<div class="in-answer1 add-col">
 		<h1>25</h1>
-		<p>Questions Ask</p>
+		<p>Questions Asked</p>
 	</div>
 	<div class="in-answer2 add-col">
 		<h1>20</h1>
@@ -132,7 +191,7 @@
 	<h1>About Me:</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
-</div>
+</div> -->
 <footer class="footer">
    <div class="footer-container">
     <div><span>Qu</span>estioner</div>
