--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <title>Questioner | Welcome Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="./css/modal.css">
 <link rel="stylesheet" type="text/css" href="./css/login.css">
+<link rel="stylesheet" type="text/css" href="./css/font.css" >
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 
@@ -21,7 +23,7 @@
        		<li class="target"><a href="" >Home</a></li>
        		<li><a href="siginup.html">Signup</a></li>
        		<li><a href="login.html">Login</a></li>
-			<li><a href="#work">Get Stated</a></li>
+			<li><a href="#work">Get Started</a></li>
 			</ul>
         </nav>
         <span class="slideshow"  onclick="openNav()">&#9776;</span>
@@ -37,18 +39,132 @@
 	  </div>	
 	</header>
 	<main id="page-wrapper" class="scrolling-box">
-	  <div class="image-container">
-       <img src="images/image-banner.jpg"  alt="banner"/>
-	    <div class="image-banner">
-		  <h2>Search for Meetups</h2>
-				<p style="padding-top:5px;padding-bottom: 5px;">
-					<form class="example" action="">
-					<input type="text" placeholder="Search.." name="search">
-					<a href="login.html"><i class = "fa fa-search"></i></a>
-				</form>
-				</p>	
-		</div>
+ <div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="./images/meetup5 (3).jpg" style="width:100%; height: 500px;">
+      <div class="text">
+         <h1>What do you Love doing?</h1>
+         <p>Do more of it With Questioner</p>
+         <a href="siginup.html">Sign up</a>
       </div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="./images/achievement-agreement-arms-1068523.jpg" style="width:100% ; height: 500px;">
+      <div class="text">
+        <h1>What do you Love doing?</h1>
+         <p>Do more of it With Questioner</p>
+         <a href="sigin.html">Sign in</a>
+      </div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="./images/achievement-adult-agreement-1153213.jpg" style="width:100%; height: 500px;">
+      <div class="text">
+        <h1>What do you Love doing?</h1>
+         <p>Do more of it With Questioner</p>
+         <a href="#work">Get started</a></div>
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span> 
+      <span class="dot" onclick="currentSlide(2)"></span> 
+      <span class="dot" onclick="currentSlide(3)"></span> 
+    </div>
+        <div class="upcoming-mt">Upcoming Meetups</div>
+      <div class="row all-meetups" style="background-color: #d9ebf9;margin-bottom: 0px;">
+      <div class="col-sm-12 col-md-6 col-lg-4 container showZoom" style="width:30%;padding-left:3%; ">
+        <a href="login.html">
+        <div class="meetup-card">
+          <aside class="display">
+              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image: url(./images/conference1.jpg);"></div>
+          </aside>
+          <main class="info">
+            <div class="date-thumbnail">
+              <p class="month">FEB</p>
+              <p class="day grey-color">20</p>
+            </div>
+            <div class="details row flex-1">
+              <h3 class="title">
+                <a href="">
+                  International Produced Water (IPWCEA), 2019
+                </a>
+              </h3>
+              <div class="more grey-color">
+                <p class="detail-text" name="date">Tue, 22 - Thu, 24, 10:00am</p>
+                <p class="detail-text" name="venue">Ikoyi, Lagos, Nigeria</p>
+              </div>
+            </div>
+          </main>
+        </div>
+        </a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 container showZoom" style="width:30%; padding-left:3%;">
+        <a href="login.html">
+        <div class="meetup-card">
+          <aside class="display">
+              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image:url(./images/conference.jpg);"></div>
+          </aside>
+          <main class="info">
+            <div class="date-thumbnail">
+              <p class="month">JAN</p>
+              <p class="day grey-color">20</p>
+            </div>
+            <div class="details row flex-1">
+              <h3 class="title">
+                <a href="">
+                 International Conference  (ICMESS) 2019
+                </a>
+              </h3>
+              <div class="more grey-color">
+                <p class="detail-text" name="date">Mon, 14 - Tue, 15  10:00am</p>
+                <p class="detail-text" name="venue">Ikoyi, Lagos, Nigeria</p>
+              </div>
+            </div>
+          </main>
+        </div>
+        </a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 container showZoom" style="width: 30%; padding-right:3%;">
+        <a href="login.html">
+        <div class="meetup-card">
+          <aside class="display">
+              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image: url(./images/conference2.jpg);"></div>
+          </aside>
+          <main class="info">
+            <div class="date-thumbnail">
+              <p class="month">JAN</p>
+              <p class="day grey-color">30</p>
+            </div>
+            <div class="details row flex-1">
+              <h3 class="title">
+                <a href="">
+                  West African International (WAIPEC), 2019
+                </a>
+              </h3>
+              <div class="more grey-color">
+                <p class="detail-text" name="date">Sat, Jul 20, 10:00am</p>
+                <p class="detail-text" name="venue"> Victoria Island, lagos</p>
+              </div>
+            </div>
+          </main>
+        </div>
+        </a>
+      </div>
+      <a href="javascript:void(0)" class="previ-btn round">&#8249;</a>
+      <a href="javascript:void(0)" class="next-btn round">&#8250;</a>
+    </div>
+
       <div class="container-work" id="work">
       	<div class="container-wrapup">
       	 	<h2>How It Works</h2>
@@ -74,106 +190,43 @@
 	</div>
    <div class="clearfix"></div>
 		</main>
-		<div class="upcoming-mt">Upcoming Meetups</div>
-		<div class="row all-meetups">
-			<div class="col-sm-12 col-md-6 col-lg-4 container" style="width:30%">
-				<a href="login.html">
-        <div class="meetup-card">
-          <aside class="display">
-              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image: url(./images/conference1.jpg);"></div>
-          </aside>
-          <main class="info">
-            <div class="date-thumbnail">
-              <p class="month">FEB</p>
-              <p class="day grey-color">20</p>
-            </div>
-            <div class="details row flex-1">
-              <h3 class="title">
-                <a href="">
-                  International Produced Water (IPWCEA), 2019
-                </a>
-              </h3>
-              <div class="more grey-color">
-                <p class="detail-text" name="date">Tue, 22 - Thu, 24, 10:00am</p>
-                <p class="detail-text" name="venue">Ikoyi, Lagos, Nigeria</p>
-              </div>
-            </div>
-          </main>
-				</div>
-				</a>
-      </div>
-			<div class="col-sm-12 col-md-6 col-lg-4 container" style="width:30%;">
-				<a href="login.html">
-        <div class="meetup-card">
-          <aside class="display">
-              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image:url(./images/conference.jpg);"></div>
-          </aside>
-          <main class="info">
-            <div class="date-thumbnail">
-              <p class="month">JAN</p>
-              <p class="day grey-color">20</p>
-            </div>
-            <div class="details row flex-1">
-              <h3 class="title">
-                <a href="">
-                 International Conference  (ICMESS) 2019
-                </a>
-              </h3>
-              <div class="more grey-color">
-                <p class="detail-text" name="date">Mon, 14 - Tue, 15  10:00am</p>
-                <p class="detail-text" name="venue">Ikoyi, Lagos, Nigeria</p>
-              </div>
-            </div>
-          </main>
-				</div>
-				</a>
-      </div>
-			<div class="col-sm-12 col-md-6 col-lg-4 container" style="width: 30%;">
-				<a href="login.html">
-        <div class="meetup-card">
-          <aside class="display">
-              <div class="with-back-img meetup-display-img" style="background-color: #b0e6ce; background-image: url(./images/conference2.jpg);"></div>
-          </aside>
-          <main class="info">
-            <div class="date-thumbnail">
-              <p class="month">JAN</p>
-              <p class="day grey-color">30</p>
-            </div>
-            <div class="details row flex-1">
-              <h3 class="title">
-                <a href="">
-                  West African International (WAIPEC), 2019
-                </a>
-              </h3>
-              <div class="more grey-color">
-                <p class="detail-text" name="date">Sat, Jul 20, 10:00am</p>
-                <p class="detail-text" name="venue"> Victoria Island, lagos</p>
-              </div>
-            </div>
-          </main>
-				</div>
-				</a>
-			</div>
-
-			</div>
-	<section class="section-container">
-	  <article class="section-article">
-	   <h3>Join Our Meetup</h3>
-	  <a href="login.html"><img src="images/meetup.jpg" width="550" height="350" alt="meetup" /></a>
-	 
-	  </article>
-	  <article class="section-article">
-	  <h3>Watch Meetup videos</h3>
-	  <iframe width="550" height="350" src="https://www.youtube.com/embed/Ilwkp8TUF-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	  </article>
-    </section>
+		
 <footer class="footer">
   <div class="footer-container">
     <div><span>Qu</span>estioner</div>
-  	<p>All rights reserved © 2018</p>
+    <p>All rights reserved © 2018</p>
   </div>
 </footer>
 </div>
+<script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {slideIndex = 1}    
+      if (n < 1) {slideIndex = slides.length}
+      for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";  
+      }
+      for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";  
+      dots[slideIndex-1].className += " active";
+    }
+</script>
+
 <script src="js/basic.js"></script>
 </body>
 </html>
