--- a/siginup.html
+++ b/siginup.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/login.css" />
 <link rel="stylesheet" type="text/css" href="css/font.css" >
 </head>
-<body>
+<body style="background-image: url(./images/achv.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;">
    <header class="header-page" id="header">
 	  <div class="questioner-header" id="questioner">
 	  	<h1><span>Qu</span>estioner</h1>
