fixed glitch from Ui

--- a/dashboard/admindasbord/index.html
+++ b/dashboard/admindasbord/index.html
@@ -142,7 +142,7 @@
             <div class="details row flex-1">
               <h3 class="title">
                 <a href="">
-                 International Conference on Management Economics & Social Science (ICMESS)
+                 International Conference on Management Economics & Social Science (ICMESS), 2019
                 </a>
               </h3>
               <div class="more grey-color">
